<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splashscreen.SplashscreenWelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/splashFormImageView"
            android:contentDescription="@string/splashscreen_linu_image_desc"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/splashFormWelcomeTextView"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            app:srcCompat="@mipmap/linu_liest" />

        <TextView
            android:id="@+id/splashFormWelcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/splashFormFirstNameEditText"
            android:layout_centerInParent="true"
            android:layout_marginBottom="70dp"
            android:text="@string/splashscreen_form_headline"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/splashFormFirstNameEditText"
            android:inputType="textPersonName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/splashscreen_form_firstName"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/splashFormLastNameEditText"
            android:inputType="textPersonName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashFormFirstNameEditText"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:hint="@string/splashscreen_form_lastName"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/splashFormSelectClassButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashFormLastNameEditText"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:text="@string/splashscreen_form_selectClass" />

        <Button
            android:id="@+id/splashFormButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="36dp"
            android:text="@string/splashscreen_form_button" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>