<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splashscreen.SplashscreenWelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/splashDoneImageView"
            android:contentDescription="@string/splashscreen_linu_image_desc"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/splashDoneWelcomeTextView"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            app:srcCompat="@mipmap/linu_liest" />

        <TextView
            android:id="@+id/splashDoneWelcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/splashDoneTitleTextView"
            android:layout_centerInParent="true"
            android:layout_marginBottom="70dp"
            android:text="@string/splashscreen_done_headline"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/splashDoneTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/splashscreen_done_title"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/splashDoneTextTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashDoneTitleTextView"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false"
            android:layout_centerInParent="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="0dp"
            android:text="@string/splashscreen_done_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/splashDoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="36dp"
            android:text="@string/splashscreen_done_button" />





    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>